syntax = "proto3";
package assets.transactions.deputize;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_i_d = 2;
  string to_i_d = 3;
  string classification_i_d = 4;
  string maintained_properties = 5;
  bool can_mint_asset = 6;
  bool can_burn_asset = 7;
  bool can_renumerate_asset = 8;
  bool can_add_maintainer = 9;
  bool can_remove_maintainer = 10;
  bool can_mutate_maintainer = 11;

}